--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
 
 <body>
     <!-- Topbar Start -->
-    <div class="container-fluid px-5 d-none d-lg-block">
+    <div class="container-fluid px-5 d-none bg-yellow d-lg-block">
         <div class="row gx-5">
             <div class="col-lg-4 text-center py-3">
                 <div class="d-inline-flex align-items-center">
                     <i class="bi bi-geo-alt fs-1 text-primary me-3"></i>
                     <div class="text-start">
-                        <h6 class="text-uppercase fw-bold">Our Office</h6>
+                        <h6 class="text-uppercase text-primary fw-bold">Our Office</h6>
                         <span>Baijanath, Nepalgunj, Nepal</span>
                     </div>
                 </div>
@@ -48,7 +48,7 @@
                 <div class="d-inline-flex align-items-center">
                     <i class="bi bi-envelope-open fs-1 text-primary me-3"></i>
                     <div class="text-start">
-                        <h6 class="text-uppercase fw-bold">Email Us</h6>
+                        <h6 class="text-uppercase text-primary fw-bold">Email Us</h6>
                         <span>ysbuilders075@gmail.com</span>
                     </div>
                 </div>
@@ -57,7 +57,7 @@
                 <div class="d-inline-flex align-items-center">
                     <i class="bi bi-phone-vibrate fs-1 text-primary me-3"></i>
                     <div class="text-start">
-                        <h6 class="text-uppercase fw-bold">Call Us</h6>
+                        <h6 class="text-uppercase text-primary fw-bold">Call Us</h6>
                         <span>+977 9860915451</span>
                     </div>
                 </div>
@@ -68,12 +68,15 @@
 
 
     <!-- Navbar Start -->
-    <div class="container-fluid sticky-top bg-dark shadow-sm px-5 pe-lg-0">
+    <div class="container-fluid sticky-top bg-white shadow-sm px-5 pe-lg-0">
         <nav class="navbar navbar-expand-lg navbar-dark py-3 py-lg-0">
             <a href="index.html" class="navbar-brand">
-                <h1 class="m-0 display-4 text-white text-uppercase"><i class="bi bi-building text-primary me-2"></i>YS Builders</h1>
+                <h1 class="m-0 display-4">
+                <img style="height: 80px" src="img/ysbuilders-logo.jpg" alt="Y.S. Builders Logo" />
+                </h1>
+                <!-- <h1 class="m-0 display-4 text-white text-uppercase"><i class="bi bi-building text-primary me-2"></i>YS Builders</h1> -->
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+            <button class="navbar-toggler bg-primary" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
@@ -81,17 +84,15 @@
                     <a href="index.html" class="nav-item nav-link active">Home</a>
                     <a href="about.html" class="nav-item nav-link">About</a>
                     <a href="service.html" class="nav-item nav-link">Service</a>
+                    <a href="project.html" class="nav-item nav-link">Our Portfolio</a>
                     <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
+                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Blogs</a>
                         <div class="dropdown-menu m-0">
-                            <a href="project.html" class="dropdown-item">Our Project</a>
-                            <a href="team.html" class="dropdown-item">The Team</a>
-                            <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                            <a href="blog.html" class="dropdown-item">Blog Grid</a>
+                            <a href="blog.html" class="dropdown-item">Blog</a>
                             <a href="detail.html" class="dropdown-item">Blog Detail</a>
                         </div>
                     </div>
-                    <a href="contact.html" class="nav-item nav-link bg-primary text-white px-5 ms-3 d-none d-lg-block">Contact Us <i class="bi bi-arrow-right"></i></a>
+                    <a href="contact.html" class="nav-item nav-link btn btn-primary text-white px-5 ms-3 d-none d-lg-block">Contact Us <i class="bi bi-arrow-right"></i></a>
                 </div>
             </div>
         </nav>
@@ -144,7 +145,7 @@
         <div class="row g-5">
             <div class="col-lg-7">
                 <h1 class="display-5 text-uppercase mb-4">Why <span class="text-primary">Y.S. Builders?</span></h1>
-                <h2 class="text-uppercase mb-3 text-center">Select our construction firm for our unmatched dedication to excellence, punctual project completion, and creative solutions customised to fulfil your every requirement.</h4>
+                <h2 class="text-uppercase mb-3 text-center">Select our construction firm for our unmatched <span class="text-primary"> dedication to excellence, punctual project completion, and creative solutions</span> customised to fulfil your every requirement.</h4>
                 <div class="row gx-5 py-2">
                     <div class="col-sm-6 mb-2">
                         <p class="fw-bold mb-2"><i class="fa fa-check text-primary me-3"></i>Perfect Planning</p>
@@ -172,7 +173,7 @@
     <!-- Services Start -->
     <div class="container-fluid bg-light py-6 px-5">
         <div class="text-center mx-auto mb-5" style="max-width: 600px;">
-            <h1 class="display-5 text-uppercase mb-4">We Provide <span class="text-primary">The Best</span> Construction Services</h1>
+            <h1 class="display-5 text-uppercase mb-4">Our <span class="text-primary">Services</span></h1>
         </div>
         <div class="row g-5">
             <div class="col-lg-4 col-md-6">
@@ -333,7 +334,7 @@
         <div class="text-center mx-auto mb-5" style="max-width: 600px;">
             <h1 class="display-5 text-uppercase mb-4">Some Of Our <span class="text-primary">Successfull</span> Projects</h1>
         </div>
-        <div class="row gx-5">
+        <!-- <div class="row gx-5">
             <div class="col-12 text-center">
                 <div class="d-inline-block bg-white text-center pt-4 px-5 mb-5">
                     <ul class="list-inline mb-0" id="portfolio-flters">
@@ -358,81 +359,48 @@
                     </ul>
                 </div>
             </div>
-        </div>
+        </div> -->
         <div class="row g-5 portfolio-container">
             <div class="col-xl-4 col-lg-6 col-md-6 portfolio-item first">
                 <div class="position-relative portfolio-box">
-                    <img class="img-fluid w-100" src="img/portfolio-1.jpg" alt="">
-                    <a class="portfolio-title shadow-sm" href="">
+                    <img class="img-fluid w-100" src="img/project/project-7.jpg" alt="" style="min-height: 310px;">
+                    <!-- <a class="portfolio-title shadow-sm" href="">
                         <p class="h4 text-uppercase">Project Name</p>
                         <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2"></i>Baijanath, Nepalgunj, Nepal</span>
-                    </a>
-                    <a class="portfolio-btn" href="img/portfolio-1.jpg" data-lightbox="portfolio">
+                    </a> -->
+                    <a class="portfolio-btn" href="img/project/project-7.jpg" data-lightbox="portfolio">
                         <i class="bi bi-plus text-white"></i>
                     </a>
                 </div>
             </div>
             <div class="col-xl-4 col-lg-6 col-md-6 portfolio-item second">
                 <div class="position-relative portfolio-box">
-                    <img class="img-fluid w-100" src="img/portfolio-2.jpg" alt="">
-                    <a class="portfolio-title shadow-sm" href="">
+                    <img class="img-fluid w-100" src="img/project/project-4.jpg" alt="">
+                    <!-- <a class="portfolio-title shadow-sm" href="">
                         <p class="h4 text-uppercase">Project Name</p>
                         <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2"></i>Baijanath, Nepalgunj, Nepal</span>
-                    </a>
-                    <a class="portfolio-btn" href="img/portfolio-2.jpg" data-lightbox="portfolio">
+                    </a> -->
+                    <a class="portfolio-btn" href="img/project/project-4.jpg" data-lightbox="portfolio">
                         <i class="bi bi-plus text-white"></i>
                     </a>
                 </div>
             </div>
             <div class="col-xl-4 col-lg-6 col-md-6 portfolio-item first">
                 <div class="position-relative portfolio-box">
-                    <img class="img-fluid w-100" src="img/portfolio-3.jpg" alt="">
-                    <a class="portfolio-title shadow-sm" href="">
+                    <img class="img-fluid w-100" src="img/project/project-5.jpg" alt="">
+                    <!-- <a class="portfolio-title shadow-sm" href="">
                         <p class="h4 text-uppercase">Project Name</p>
                         <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2"></i>Baijanath, Nepalgunj, Nepal</span>
-                    </a>
-                    <a class="portfolio-btn" href="img/portfolio-3.jpg" data-lightbox="portfolio">
-                        <i class="bi bi-plus text-white"></i>
-                    </a>
-                </div>
-            </div>
-            <div class="col-xl-4 col-lg-6 col-md-6 portfolio-item second">
-                <div class="position-relative portfolio-box">
-                    <img class="img-fluid w-100" src="img/portfolio-4.jpg" alt="">
-                    <a class="portfolio-title shadow-sm" href="">
-                        <p class="h4 text-uppercase">Project Name</p>
-                        <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2"></i>Baijanath, Nepalgunj, Nepal</span>
-                    </a>
-                    <a class="portfolio-btn" href="img/portfolio-4.jpg" data-lightbox="portfolio">
-                        <i class="bi bi-plus text-white"></i>
-                    </a>
-                </div>
-            </div>
-            <div class="col-xl-4 col-lg-6 col-md-6 portfolio-item first">
-                <div class="position-relative portfolio-box">
-                    <img class="img-fluid w-100" src="img/portfolio-5.jpg" alt="">
-                    <a class="portfolio-title shadow-sm" href="">
-                        <p class="h4 text-uppercase">Project Name</p>
-                        <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2"></i>Baijanath, Nepalgunj, Nepal</span>
-                    </a>
-                    <a class="portfolio-btn" href="img/portfolio-5.jpg" data-lightbox="portfolio">
-                        <i class="bi bi-plus text-white"></i>
-                    </a>
-                </div>
-            </div>
-            <div class="col-xl-4 col-lg-6 col-md-6 portfolio-item second">
-                <div class="position-relative portfolio-box">
-                    <img class="img-fluid w-100" src="img/portfolio-6.jpg" alt="">
-                    <a class="portfolio-title shadow-sm" href="">
-                        <p class="h4 text-uppercase">Project Name</p>
-                        <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2"></i>Baijanath, Nepalgunj, Nepal</span>
-                    </a>
-                    <a class="portfolio-btn" href="img/portfolio-6.jpg" data-lightbox="portfolio">
+                    </a> -->
+                    <a class="portfolio-btn" href="img/project/project-5.jpg" data-lightbox="portfolio">
                         <i class="bi bi-plus text-white"></i>
                     </a>
                 </div>
             </div>
         </div>
+        <div class="text-center mx-auto " style="max-width: 300px;">
+            <a href="project.html" class="nav-item nav-link btn btn-primary text-white px-5 ms-3 d-none d-lg-block">View More Projects<i class="bi bi-arrow-right"></i></a>
+        </div>  
     </div>
     <!-- Portfolio End -->
 
@@ -598,16 +566,15 @@
     
 
     <!-- Footer Start -->
-    <div class="footer container-fluid position-relative bg-dark  text-white-50 py-6 px-5">
+    <div class="footer container-fluid position-relative bg-yellow text-white-50 py-6 px-5">
         <div class="row g-5">
             <div class="col-lg-6 pe-lg-5">
                 <a href="index.html" class="navbar-brand">
-                    <h1 class="m-0 display-4 text-uppercase text-white"><i class="bi bi-building text-primary me-2"></i>Y.S. Builders</h1>
+                    <h1 class="m-0 display-4">
+                    <img style="height: 300px;" src="img/footer-logo.png" alt="Y.S. Builders Footer Logo" />
+                    </h1>
+                    <!-- <h1 class="m-0 display-4 text-white text-uppercase"><i class="bi bi-building text-primary me-2"></i>YS Builders</h1> -->
                 </a>
-               
-                <p><i class="fa fa-map-marker-alt me-2"></i>Baijanath, Nepalgunj, Nepal</p>
-                <p><i class="fa fa-phone-alt me-2"></i>+977 9860915451</p>
-                <p><i class="fa fa-envelope me-2"></i>ysbuilders075@gmail.com</p>
                 <!-- <div class="d-flex justify-content-start mt-4">
                     <a class="btn btn-lg btn-primary btn-lg-square rounded-0 me-2" href="#"><i class="fab fa-twitter"></i></a>
                     <a class="btn btn-lg btn-primary btn-lg-square rounded-0 me-2" href="#"><i class="fab fa-facebook-f"></i></a>
@@ -620,21 +587,26 @@
                     <div class="col-sm-6">
                         <h4 class="text-white text-uppercase mb-4">Quick Links</h4>
                         <div class="d-flex flex-column justify-content-start">
-                            <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Home</a>
-                            <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right me-2"></i>About Us</a>
-                            <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Our Services</a>
-                            <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Meet The Team</a>
-                            <a class="text-white-50" href="#"><i class="fa fa-angle-right me-2"></i>Contact Us</a>
+                            <a class="text-white-50 mb-2" href="index.html"><i class="fa fa-angle-right me-2"></i>Home</a>
+                            <a class="text-white-50 mb-2" href="about.html"><i class="fa fa-angle-right me-2"></i>About Us</a>
+                            <a class="text-white-50 mb-2" href="service.html"><i class="fa fa-angle-right me-2"></i>Our Services</a>
+                            <a class="text-white-50 mb-2" href="project.html"><i class="fa fa-angle-right me-2"></i>Our Portfolio</a>
+                            <a class="text-white-50 mb-2" href="blog.html"><i class="fa fa-angle-right me-2"></i>Blog</a>
+                            <a class="text-white-50" href="contact.html"><i class="fa fa-angle-right me-2"></i>Contact Us</a>
                         </div>
                     </div>
                     <div class="col-sm-6">
-                        <h4 class="text-white text-uppercase mb-4">Popular Links</h4>
+                        <h4 class="text-white text-uppercase mb-4">Locations</h4>
                         <div class="d-flex flex-column justify-content-start">
-                            <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Home</a>
-                            <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right me-2"></i>About Us</a>
-                            <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Our Services</a>
-                            <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Meet The Team</a>
-                            <a class="text-white-50" href="#"><i class="fa fa-angle-right me-2"></i>Contact Us</a>
+                            <p><i class="fa fa-map-marker-alt me-2"></i>Baijanath, Nepalgunj, Nepal</p>
+                            <p><i class="fa fa-phone-alt me-2"></i>+977 9860915451</p>
+                            <p><i class="fa fa-envelope me-2"></i>ysbuilders075@gmail.com</p>
+                            <!-- <div class="d-flex justify-content-start mt-4">
+                                <a class="btn btn-lg btn-primary btn-lg-square rounded-0 me-2" href="#"><i class="fab fa-twitter"></i></a>
+                                <a class="btn btn-lg btn-primary btn-lg-square rounded-0 me-2" href="#"><i class="fab fa-facebook-f"></i></a>
+                                <a class="btn btn-lg btn-primary btn-lg-square rounded-0 me-2" href="#"><i class="fab fa-linkedin-in"></i></a>
+                                <a class="btn btn-lg btn-primary btn-lg-square rounded-0" href="#"><i class="fab fa-instagram"></i></a>
+                            </div> -->
                         </div>
                     </div>
                 </div>
