--- a/service.html
+++ b/service.html
@@ -33,13 +33,13 @@
 
 <body>
     <!-- Topbar Start -->
-    <div class="container-fluid px-5 d-none d-lg-block">
+    <div class="container-fluid px-5 d-none bg-yellow d-lg-block">
         <div class="row gx-5">
             <div class="col-lg-4 text-center py-3">
                 <div class="d-inline-flex align-items-center">
                     <i class="bi bi-geo-alt fs-1 text-primary me-3"></i>
                     <div class="text-start">
-                        <h6 class="text-uppercase fw-bold">Our Office</h6>
+                        <h6 class="text-uppercase text-primary fw-bold">Our Office</h6>
                         <span>Baijanath, Nepalgunj, Nepal</span>
                     </div>
                 </div>
@@ -48,7 +48,7 @@
                 <div class="d-inline-flex align-items-center">
                     <i class="bi bi-envelope-open fs-1 text-primary me-3"></i>
                     <div class="text-start">
-                        <h6 class="text-uppercase fw-bold">Email Us</h6>
+                        <h6 class="text-uppercase text-primary fw-bold">Email Us</h6>
                         <span>ysbuilders075@gmail.com</span>
                     </div>
                 </div>
@@ -57,7 +57,7 @@
                 <div class="d-inline-flex align-items-center">
                     <i class="bi bi-phone-vibrate fs-1 text-primary me-3"></i>
                     <div class="text-start">
-                        <h6 class="text-uppercase fw-bold">Call Us</h6>
+                        <h6 class="text-uppercase text-primary fw-bold">Call Us</h6>
                         <span>+977 9860915451</span>
                     </div>
                 </div>
@@ -67,37 +67,37 @@
     <!-- Topbar End -->
 
 
-     <!-- Navbar Start -->
-     <div class="container-fluid sticky-top bg-dark shadow-sm px-5 pe-lg-0">
+    <!-- Navbar Start -->
+    <div class="container-fluid sticky-top bg-white shadow-sm px-5 pe-lg-0">
         <nav class="navbar navbar-expand-lg navbar-dark py-3 py-lg-0">
             <a href="index.html" class="navbar-brand">
-                <h1 class="m-0 display-4 text-white text-uppercase"><i class="bi bi-building text-primary me-2"></i>YS Builders</h1>
+                <h1 class="m-0 display-4">
+                <img style="height: 80px" src="img/ysbuilders-logo.jpg" alt="Y.S. Builders Logo" />
+                </h1>
+                <!-- <h1 class="m-0 display-4 text-white text-uppercase"><i class="bi bi-building text-primary me-2"></i>YS Builders</h1> -->
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+            <button class="navbar-toggler bg-primary" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarCollapse">
                 <div class="navbar-nav ms-auto py-0">
-                    <a href="index.html" class="nav-item nav-link">Home</a>
+                    <a href="index.html" class="nav-item nav-link active">Home</a>
                     <a href="about.html" class="nav-item nav-link">About</a>
                     <a href="service.html" class="nav-item nav-link active">Service</a>
+                    <a href="project.html" class="nav-item nav-link">Our Portfolio</a>
                     <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
+                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Blogs</a>
                         <div class="dropdown-menu m-0">
-                            <a href="project.html" class="dropdown-item">Our Project</a>
-                            <a href="team.html" class="dropdown-item">The Team</a>
-                            <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                            <a href="blog.html" class="dropdown-item">Blog Grid</a>
+                            <a href="blog.html" class="dropdown-item">Blog</a>
                             <a href="detail.html" class="dropdown-item">Blog Detail</a>
                         </div>
                     </div>
-                    <a href="contact.html" class="nav-item nav-link bg-primary text-white px-5 ms-3 d-none d-lg-block">Contact Us <i class="bi bi-arrow-right"></i></a>
+                    <a href="contact.html" class="nav-item nav-link btn btn-primary text-white px-5 ms-3 d-none d-lg-block">Contact Us <i class="bi bi-arrow-right"></i></a>
                 </div>
             </div>
         </nav>
     </div>
     <!-- Navbar End -->
-
 
     <!-- Page Header Start -->
     <div class="container-fluid page-header">
@@ -289,49 +289,53 @@
 
 
     <!-- Footer Start -->
-   <div class="footer container-fluid position-relative bg-dark  text-white-50 py-6 px-5">
-    <div class="row g-5">
-        <div class="col-lg-6 pe-lg-5">
-            <a href="index.html" class="navbar-brand">
-                <h1 class="m-0 display-4 text-uppercase text-white"><i class="bi bi-building text-primary me-2"></i>Y.S. Builders</h1>
-            </a>
-           
-            <p><i class="fa fa-map-marker-alt me-2"></i>Baijanath, Nepalgunj, Nepal</p>
-            <p><i class="fa fa-phone-alt me-2"></i>+977 9860915451</p>
-            <p><i class="fa fa-envelope me-2"></i>ysbuilders075@gmail.com</p>
-            <!-- <div class="d-flex justify-content-start mt-4">
-                <a class="btn btn-lg btn-primary btn-lg-square rounded-0 me-2" href="#"><i class="fab fa-twitter"></i></a>
-                <a class="btn btn-lg btn-primary btn-lg-square rounded-0 me-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                <a class="btn btn-lg btn-primary btn-lg-square rounded-0 me-2" href="#"><i class="fab fa-linkedin-in"></i></a>
-                <a class="btn btn-lg btn-primary btn-lg-square rounded-0" href="#"><i class="fab fa-instagram"></i></a>
-            </div> -->
-        </div>
-        <div class="col-lg-6 ps-lg-5">
-            <div class="row g-5">
-                <div class="col-sm-6">
-                    <h4 class="text-white text-uppercase mb-4">Quick Links</h4>
-                    <div class="d-flex flex-column justify-content-start">
-                        <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Home</a>
-                        <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right me-2"></i>About Us</a>
-                        <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Our Services</a>
-                        <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Meet The Team</a>
-                        <a class="text-white-50" href="#"><i class="fa fa-angle-right me-2"></i>Contact Us</a>
+    <div class="footer container-fluid position-relative bg-yellow text-white-50 py-6 px-5">
+        <div class="row g-5">
+            <div class="col-lg-6 pe-lg-5">
+                <a href="index.html" class="navbar-brand">
+                    <h1 class="m-0 display-4">
+                    <img style="height: 300px;" src="img/footer-logo.png" alt="Y.S. Builders Footer Logo" />
+                    </h1>
+                    <!-- <h1 class="m-0 display-4 text-white text-uppercase"><i class="bi bi-building text-primary me-2"></i>YS Builders</h1> -->
+                </a>
+                <!-- <div class="d-flex justify-content-start mt-4">
+                    <a class="btn btn-lg btn-primary btn-lg-square rounded-0 me-2" href="#"><i class="fab fa-twitter"></i></a>
+                    <a class="btn btn-lg btn-primary btn-lg-square rounded-0 me-2" href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a class="btn btn-lg btn-primary btn-lg-square rounded-0 me-2" href="#"><i class="fab fa-linkedin-in"></i></a>
+                    <a class="btn btn-lg btn-primary btn-lg-square rounded-0" href="#"><i class="fab fa-instagram"></i></a>
+                </div> -->
+            </div>
+            <div class="col-lg-6 ps-lg-5">
+                <div class="row g-5">
+                    <div class="col-sm-6">
+                        <h4 class="text-white text-uppercase mb-4">Quick Links</h4>
+                        <div class="d-flex flex-column justify-content-start">
+                            <a class="text-white-50 mb-2" href="index.html"><i class="fa fa-angle-right me-2"></i>Home</a>
+                            <a class="text-white-50 mb-2" href="about.html"><i class="fa fa-angle-right me-2"></i>About Us</a>
+                            <a class="text-white-50 mb-2" href="service.html"><i class="fa fa-angle-right me-2"></i>Our Services</a>
+                            <a class="text-white-50 mb-2" href="project.html"><i class="fa fa-angle-right me-2"></i>Our Portfolio</a>
+                            <a class="text-white-50 mb-2" href="blog.html"><i class="fa fa-angle-right me-2"></i>Blog</a>
+                            <a class="text-white-50" href="contact.html"><i class="fa fa-angle-right me-2"></i>Contact Us</a>
+                        </div>
                     </div>
-                </div>
-                <div class="col-sm-6">
-                    <h4 class="text-white text-uppercase mb-4">Popular Links</h4>
-                    <div class="d-flex flex-column justify-content-start">
-                        <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Home</a>
-                        <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right me-2"></i>About Us</a>
-                        <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Our Services</a>
-                        <a class="text-white-50 mb-2" href="#"><i class="fa fa-angle-right me-2"></i>Meet The Team</a>
-                        <a class="text-white-50" href="#"><i class="fa fa-angle-right me-2"></i>Contact Us</a>
+                    <div class="col-sm-6">
+                        <h4 class="text-white text-uppercase mb-4">Locations</h4>
+                        <div class="d-flex flex-column justify-content-start">
+                            <p><i class="fa fa-map-marker-alt me-2"></i>Baijanath, Nepalgunj, Nepal</p>
+                            <p><i class="fa fa-phone-alt me-2"></i>+977 9860915451</p>
+                            <p><i class="fa fa-envelope me-2"></i>ysbuilders075@gmail.com</p>
+                            <!-- <div class="d-flex justify-content-start mt-4">
+                                <a class="btn btn-lg btn-primary btn-lg-square rounded-0 me-2" href="#"><i class="fab fa-twitter"></i></a>
+                                <a class="btn btn-lg btn-primary btn-lg-square rounded-0 me-2" href="#"><i class="fab fa-facebook-f"></i></a>
+                                <a class="btn btn-lg btn-primary btn-lg-square rounded-0 me-2" href="#"><i class="fab fa-linkedin-in"></i></a>
+                                <a class="btn btn-lg btn-primary btn-lg-square rounded-0" href="#"><i class="fab fa-instagram"></i></a>
+                            </div> -->
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 <div class="container-fluid bg-dark text-white border-top border-primary px-0">
     <div class="d-flex flex-column flex-md-row justify-content-between">
         <div class="py-4 px-5 text-center text-md-start">
