--- a/blog.html
+++ b/blog.html
@@ -7,7 +7,7 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="YS Builders Construction Company" name="keywords" />
     <meta content="YS Builders Construction Company" name="description" />
-    
+
     <!-- Favicon -->
     <link href="img/favicon.ico" rel="icon">
 
@@ -331,7 +331,7 @@
 
     <!-- Footer Start -->
     <div
-      class="footer container-fluid position-relative bg-footer text-white-50 py-6 px-5"
+      class="footer container-fluid position-relative bg-dark text-white-50 py-6 px-5"
     >
       <div class="row g-5">
         <div class="col-lg-6 pe-lg-5">
