--- a/service.html
+++ b/service.html
@@ -351,7 +351,7 @@
 
     <!-- Footer Start -->
     <div
-      class="footer container-fluid position-relative bg-footer text-white-50 py-6 px-5"
+      class="footer container-fluid position-relative bg-dark text-white-50 py-6 px-5"
     >
       <div class="row g-5">
         <div class="col-lg-6 pe-lg-5">
