--- a/project.html
+++ b/project.html
@@ -154,7 +154,7 @@
                     </a>
                 </div>
             </div>
-            <div class="col-lg-6 col-md-6 portfolio-item first">
+            <div class="col-lg-6 col-md-6 portfolio-item">
                 <div class="position-relative portfolio-box">
                     <img class="img-fluid w-100" src="img/project/project-16.jpg" alt="">
                     <!-- <a class="portfolio-title shadow-sm" href="">
@@ -262,7 +262,7 @@
                     </a>
                 </div>
             </div>
-            <div class="col-lg-6 col-md-6 portfolio-item first">
+            <div class="col-lg-6 col-md-6 portfolio-item">
                 <div class="position-relative portfolio-box">
                     <img class="img-fluid w-100" src="img/project/project-17.jpg" alt="">
                     <!-- <a class="portfolio-title shadow-sm" href="">
@@ -274,7 +274,7 @@
                     </a>
                 </div>
             </div>
-            <div class="col-lg-6 col-md-6 portfolio-item first">
+            <div class="col-lg-6 col-md-6 portfolio-item">
                 <div class="position-relative portfolio-box">
                     <img class="img-fluid w-100" src="img/project/project-13.jpg" alt="">
                     <!-- <a class="portfolio-title shadow-sm" href="">
@@ -322,8 +322,8 @@
                     </a>
                 </div>
             </div>
-            
-            <div class="col-lg-6 col-md-6 portfolio-item first">
+
+            <div class="col-lg-6 col-md-6 portfolio-item">
                 <div class="position-relative portfolio-box">
                     <img class="img-fluid w-100" src="img/project/project-15.jpg" alt="">
                     <!-- <a class="portfolio-title shadow-sm" href="">
