--- a/service.html
+++ b/service.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>YS Builders Construction Company</title>
+    <title>YS Builders Construction Company -Services</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="YS Builders Construction Company" name="keywords" />
     <meta content="YS Builders Construction Company" name="description" />
