--- a/detail.html
+++ b/detail.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>YS Builders Construction Company - Blog</title>
+    <title>YS Builders Construction Company - Blog Details </title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="YS Builders Construction Company" name="keywords" />
     <meta content="YS Builders Construction Company" name="description" />
