--- a/project.html
+++ b/project.html
@@ -101,7 +101,7 @@
 
     <!-- Page Header Start -->
     <div class="container-fluid page-header">
-        <h1 class="display-3 text-uppercase text-white mb-3">Projects</h1>
+        <h1 class="display-3 text-uppercase text-white mb-3">Our Projects</h1>
         <div class="d-inline-flex text-white">
             <h6 class="text-uppercase m-0"><a href="">Home</a></h6>
             <h6 class="text-white m-0 px-3">/</h6>
