--- a/project.html
+++ b/project.html
@@ -40,7 +40,7 @@
                     <i class="bi bi-geo-alt fs-1 text-primary me-3"></i>
                     <div class="text-start">
                         <h6 class="text-uppercase text-primary fw-bold">Our Office</h6>
-                        <span>Baijanath, Nepalgunj, Nepal</span>
+                        <span>Kupondole, Lalitpur, Nepal</span>
                     </div>
                 </div>
             </div>
@@ -147,7 +147,7 @@
                     <img class="img-fluid w-100" src="img/project/project-19.jpg" alt="" style="max-height: 440px;">
                     <!-- <a class="portfolio-title shadow-sm" href="">
                         <p class="h4 text-uppercase">Project Name</p>
-                        <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2"></i>Baijanath, Nepalgunj, Nepal</span>
+                        <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2"></i>Kupondole, Lalitpur, Nepal</span>
                     </a> -->
                     <a class="portfolio-btn" href="img/project/project-19.jpg" data-lightbox="portfolio" >
                         <i class="bi bi-plus text-white"></i>
@@ -159,7 +159,7 @@
                     <img class="img-fluid w-100" src="img/project/project-16.jpg" alt="">
                     <!-- <a class="portfolio-title shadow-sm" href="">
                         <p class="h4 text-uppercase">Project Name</p>
-                        <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2"></i>Baijanath, Nepalgunj, Nepal</span>
+                        <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2"></i>Kupondole, Lalitpur, Nepal</span>
                     </a> -->
                     <a class="portfolio-btn" href="img/project/project-16.jpg" data-lightbox="portfolio">
                         <i class="bi bi-plus text-white"></i>
@@ -171,7 +171,7 @@
                     <img class="img-fluid w-100" src="img/project/project-4.jpg" alt="">
                     <!-- <a class="portfolio-title shadow-sm" href="">
                         <p class="h4 text-uppercase">Project Name</p>
-                        <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2"></i>Baijanath, Nepalgunj, Nepal</span>
+                        <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2"></i>Kupondole, Lalitpur, Nepal</span>
                     </a> -->
                     <a class="portfolio-btn" href="img/project/project-4.jpg" data-lightbox="portfolio">
                         <i class="bi bi-plus text-white"></i>
@@ -183,7 +183,7 @@
                     <img class="img-fluid w-100" src="img/project/project-3.jpg" alt="">
                     <!-- <a class="portfolio-title shadow-sm" href="">
                         <p class="h4 text-uppercase">Project Name</p>
-                        <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2"></i>Baijanath, Nepalgunj, Nepal</span>
+                        <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2"></i>Kupondole, Lalitpur, Nepal</span>
                     </a> -->
                     <a class="portfolio-btn" href="img/project/project-3.jpg" data-lightbox="portfolio">
                         <i class="bi bi-plus text-white"></i>
@@ -195,7 +195,7 @@
                     <img class="img-fluid w-100" src="img/project/project-1.jpg" alt="">
                     <!-- <a class="portfolio-title shadow-sm" href="">
                         <p class="h4 text-uppercase">Project Name</p>
-                        <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2"></i>Baijanath, Nepalgunj, Nepal</span>
+                        <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2"></i>Kupondole, Lalitpur, Nepal</span>
                     </a> -->
                     <a class="portfolio-btn" href="img/project/project-1.jpg" data-lightbox="portfolio">
                         <i class="bi bi-plus text-white"></i>
@@ -207,7 +207,7 @@
                     <img class="img-fluid w-100" src="img/project/project-2.jpg" alt="">
                     <!-- <a class="portfolio-title shadow-sm" href="">
                         <p class="h4 text-uppercase">Project Name</p>
-                        <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2"></i>Baijanath, Nepalgunj, Nepal</span>
+                        <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2"></i>Kupondole, Lalitpur, Nepal</span>
                     </a> -->
                     <a class="portfolio-btn" href="img/project/project-2.jpg" data-lightbox="portfolio">
                         <i class="bi bi-plus text-white"></i>
@@ -219,7 +219,7 @@
                     <img class="img-fluid w-100" src="img/project/project-7.jpg" alt="" style="min-height: 340px;">
                     <!-- <a class="portfolio-title shadow-sm" href="">
                         <p class="h4 text-uppercase">Project Name</p>
-                        <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2"></i>Baijanath, Nepalgunj, Nepal</span>
+                        <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2"></i>Kupondole, Lalitpur, Nepal</span>
                     </a> -->
                     <a class="portfolio-btn" href="img/project/project-7.jpg" data-lightbox="portfolio">
                         <i class="bi bi-plus text-white"></i>
@@ -231,7 +231,7 @@
                     <img class="img-fluid w-100" src="img/project/project-6.jpg" alt="">
                     <!-- <a class="portfolio-title shadow-sm" href="">
                         <p class="h4 text-uppercase">Project Name</p>
-                        <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2"></i>Baijanath, Nepalgunj, Nepal</span>
+                        <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2"></i>Kupondole, Lalitpur, Nepal</span>
                     </a> -->
                     <a class="portfolio-btn" href="img/project/project-6.jpg" data-lightbox="portfolio">
                         <i class="bi bi-plus text-white"></i>
@@ -243,7 +243,7 @@
                     <img class="img-fluid w-100" src="img/project/project-12.jpg" alt="">
                     <!-- <a class="portfolio-title shadow-sm" href="">
                         <p class="h4 text-uppercase">Project Name</p>
-                        <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2"></i>Baijanath, Nepalgunj, Nepal</span>
+                        <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2"></i>Kupondole, Lalitpur, Nepal</span>
                     </a> -->
                     <a class="portfolio-btn" href="img/project/project-12.jpg" data-lightbox="portfolio">
                         <i class="bi bi-plus text-white"></i>
@@ -255,7 +255,7 @@
                     <img class="img-fluid w-100" src="img/project/project-5.jpg" alt="">
                     <!-- <a class="portfolio-title shadow-sm" href="">
                         <p class="h4 text-uppercase">Project Name</p>
-                        <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2"></i>Baijanath, Nepalgunj, Nepal</span>
+                        <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2"></i>Kupondole, Lalitpur, Nepal</span>
                     </a> -->
                     <a class="portfolio-btn" href="img/project/project-5.jpg" data-lightbox="portfolio">
                         <i class="bi bi-plus text-white"></i>
@@ -267,7 +267,7 @@
                     <img class="img-fluid w-100" src="img/project/project-17.jpg" alt="">
                     <!-- <a class="portfolio-title shadow-sm" href="">
                         <p class="h4 text-uppercase">Project Name</p>
-                        <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2"></i>Baijanath, Nepalgunj, Nepal</span>
+                        <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2"></i>Kupondole, Lalitpur, Nepal</span>
                     </a> -->
                     <a class="portfolio-btn" href="img/project/project-17.jpg" data-lightbox="portfolio">
                         <i class="bi bi-plus text-white"></i>
@@ -279,7 +279,7 @@
                     <img class="img-fluid w-100" src="img/project/project-13.jpg" alt="">
                     <!-- <a class="portfolio-title shadow-sm" href="">
                         <p class="h4 text-uppercase">Project Name</p>
-                        <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2"></i>Baijanath, Nepalgunj, Nepal</span>
+                        <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2"></i>Kupondole, Lalitpur, Nepal</span>
                     </a> -->
                     <a class="portfolio-btn" href="img/project/project-13.jpg" data-lightbox="portfolio">
                         <i class="bi bi-plus text-white"></i>
@@ -291,7 +291,7 @@
                     <img class="img-fluid w-100" src="img/project/project-10.jpg" alt="" style="max-height: 440px;">
                     <!-- <a class="portfolio-title shadow-sm" href="">
                         <p class="h4 text-uppercase">Project Name</p>
-                        <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2"></i>Baijanath, Nepalgunj, Nepal</span>
+                        <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2"></i>Kupondole, Lalitpur, Nepal</span>
                     </a> -->
                     <a class="portfolio-btn" href="img/project/project-10.jpg" data-lightbox="portfolio" >
                         <i class="bi bi-plus text-white"></i>
@@ -303,7 +303,7 @@
                     <img class="img-fluid w-100" src="img/project/project-8.jpg" alt="">
                     <!-- <a class="portfolio-title shadow-sm" href="">
                         <p class="h4 text-uppercase">Project Name</p>
-                        <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2"></i>Baijanath, Nepalgunj, Nepal</span>
+                        <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2"></i>Kupondole, Lalitpur, Nepal</span>
                     </a> -->
                     <a class="portfolio-btn" href="img/project/project-8.jpg" data-lightbox="portfolio">
                         <i class="bi bi-plus text-white"></i>
@@ -315,7 +315,7 @@
                     <img class="img-fluid w-100" src="img/project/project-14.jpg" alt="" style="max-height: 440px;">
                     <!-- <a class="portfolio-title shadow-sm" href="">
                         <p class="h4 text-uppercase">Project Name</p>
-                        <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2"></i>Baijanath, Nepalgunj, Nepal</span>
+                        <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2"></i>Kupondole, Lalitpur, Nepal</span>
                     </a> -->
                     <a class="portfolio-btn" href="img/project/project-14.jpg" data-lightbox="portfolio" >
                         <i class="bi bi-plus text-white"></i>
@@ -328,7 +328,7 @@
                     <img class="img-fluid w-100" src="img/project/project-15.jpg" alt="">
                     <!-- <a class="portfolio-title shadow-sm" href="">
                         <p class="h4 text-uppercase">Project Name</p>
-                        <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2"></i>Baijanath, Nepalgunj, Nepal</span>
+                        <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2"></i>Kupondole, Lalitpur, Nepal</span>
                     </a> -->
                     <a class="portfolio-btn" href="img/project/project-15.jpg" data-lightbox="portfolio">
                         <i class="bi bi-plus text-white"></i>
@@ -419,7 +419,7 @@
               <h4 class="text-white text-uppercase mb-4">Locations</h4>
               <div class="d-flex flex-column justify-content-start text-white">
                 <p>
-                  <i class="fa fa-map-marker-alt me-2 text-white"></i>Baijanath, Nepalgunj,
+                  <i class="fa fa-map-marker-alt me-2 text-white"></i>Kupondole, Lalitpur,
                   Nepal
                 </p>
                 <p><i class="fa fa-phone-alt me-2 text-white"></i>+977 9860915451</p>
