--- a/service.html
+++ b/service.html
@@ -40,7 +40,7 @@
                     <i class="bi bi-geo-alt fs-1 text-primary me-3"></i>
                     <div class="text-start">
                         <h6 class="text-uppercase text-primary fw-bold">Our Office</h6>
-                        <span>Baijanath, Nepalgunj, Nepal</span>
+                        <span>Kupondole, Lalitpur, Nepal</span>
                     </div>
                 </div>
             </div>
@@ -401,7 +401,7 @@
               <h4 class="text-white text-uppercase mb-4">Locations</h4>
               <div class="d-flex flex-column justify-content-start text-white">
                 <p>
-                  <i class="fa fa-map-marker-alt me-2 text-white"></i>Baijanath, Nepalgunj,
+                  <i class="fa fa-map-marker-alt me-2 text-white"></i>Kupondole, Lalitpur,
                   Nepal
                 </p>
                 <p><i class="fa fa-phone-alt me-2 text-white"></i>+977 9860915451</p>
