--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <i class="bi bi-geo-alt fs-1 text-primary me-3"></i>
             <div class="text-start">
               <h6 class="text-uppercase text-primary fw-bold">Our Office</h6>
-              <span>Baijanath, Nepalgunj, Nepal</span>
+              <span>Kupondole, Lalitpur, Nepal</span>
             </div>
           </div>
         </div>
@@ -481,7 +481,7 @@
             />
             <!-- <a class="portfolio-title shadow-sm" href="">
                         <p class="h4 text-uppercase">Project Name</p>
-                        <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2"></i>Baijanath, Nepalgunj, Nepal</span>
+                        <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2"></i>Kupondole, Lalitpur, Nepal</span>
                     </a> -->
             <a
               class="portfolio-btn"
@@ -502,7 +502,7 @@
             />
             <!-- <a class="portfolio-title shadow-sm" href="">
                         <p class="h4 text-uppercase">Project Name</p>
-                        <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2"></i>Baijanath, Nepalgunj, Nepal</span>
+                        <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2"></i>Kupondole, Lalitpur, Nepal</span>
                     </a> -->
             <a
               class="portfolio-btn"
@@ -523,7 +523,7 @@
             />
             <!-- <a class="portfolio-title shadow-sm" href="">
                         <p class="h4 text-uppercase">Project Name</p>
-                        <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2"></i>Baijanath, Nepalgunj, Nepal</span>
+                        <span class="text-body"><i class="fa fa-map-marker-alt text-primary me-2"></i>Kupondole, Lalitpur, Nepal</span>
                     </a> -->
             <a
               class="portfolio-btn"
@@ -860,7 +860,7 @@
               <h4 class="text-white text-uppercase mb-4">Locations</h4>
               <div class="d-flex flex-column justify-content-start text-white">
                 <p>
-                  <i class="fa fa-map-marker-alt me-2 text-white"></i>Baijanath, Nepalgunj,
+                  <i class="fa fa-map-marker-alt me-2 text-white"></i>Kupondole, Lalitpur,
                   Nepal
                 </p>
                 <p><i class="fa fa-phone-alt me-2 text-white"></i>+977 9860915451</p>
