--- a/thanks.html
+++ b/thanks.html
@@ -35,33 +35,38 @@
     <!-- Topbar Start -->
     <div class="container-fluid px-5 d-none bg-yellow d-lg-block">
         <div class="row gx-5">
-            <div class="col-lg-4 text-center py-3">
-                <div class="d-inline-flex align-items-center">
-                    <i class="bi bi-geo-alt fs-1 text-primary me-3"></i>
-                    <div class="text-start">
-                        <h6 class="text-uppercase text-primary fw-bold">Our Office</h6>
-                        <span>Kupondole, Lalitpur, Nepal</span>
-                    </div>
-                </div>
+          <div class="col-lg-4 text-center py-3">
+            <div class="d-inline-flex align-items-center">
+              <i class="bi bi-geo-alt fs-1 text-primary me-3"></i>
+              <a href="https://maps.app.goo.gl/2jRuVAPdA3SXr8KA9" target="_blank">
+              <div class="text-start">
+                <h6 class="text-uppercase text-primary fw-bold">Our Office</h6>
+                <span>Kupondole, Lalitpur, Nepal</span>
+              </div>
+              </a>
             </div>
-            <div class="col-lg-4 text-center border-start border-end py-3">
-                <div class="d-inline-flex align-items-center">
-                    <i class="bi bi-envelope-open fs-1 text-primary me-3"></i>
-                    <div class="text-start">
-                        <h6 class="text-uppercase text-primary fw-bold">Email Us</h6>
-                        <span>ysbuilders075@gmail.com</span>
-                    </div>
-                </div>
+          </div>
+          <div class="col-lg-4 text-center border-start border-end py-3">
+            <div class="d-inline-flex align-items-center">
+              <i class="bi bi-envelope-open fs-1 text-primary me-3"></i>
+              <div class="text-start">
+                <h6 class="text-uppercase text-primary fw-bold">Email Us</h6>
+               
+                <span><a
+                  href="mailto:ysbuilders075@gmail.com"
+                  >ysbuilders075@gmail.com</a></span>
+              </div>
             </div>
-            <div class="col-lg-4 text-center py-3">
-                <div class="d-inline-flex align-items-center">
-                    <i class="bi bi-phone-vibrate fs-1 text-primary me-3"></i>
-                    <div class="text-start">
-                        <h6 class="text-uppercase text-primary fw-bold">Call Us</h6>
-                        <span>+977 9860915451</span>
-                    </div>
-                </div>
+          </div>
+          <div class="col-lg-4 text-center py-3">
+            <div class="d-inline-flex align-items-center">
+              <i class="bi bi-phone-vibrate fs-1 text-primary me-3"></i>
+              <div class="text-start">
+                <h6 class="text-uppercase text-primary fw-bold">Call Us</h6>
+                <span><a href="tel://+9779860915451"> +977 9860915451</a></span>
+              </div>
             </div>
+          </div>
         </div>
     </div>
     <!-- Topbar End -->
