--- a/contact.html
+++ b/contact.html
@@ -35,36 +35,41 @@
   <!-- Topbar Start -->
   <div class="container-fluid px-5 d-none bg-yellow d-lg-block">
     <div class="row gx-5">
-        <div class="col-lg-4 text-center py-3">
-            <div class="d-inline-flex align-items-center">
-                <i class="bi bi-geo-alt fs-1 text-primary me-3"></i>
-                <div class="text-start">
-                    <h6 class="text-uppercase text-primary fw-bold">Our Office</h6>
-                    <span>Kupondole, Lalitpur, Nepal</span>
-                </div>
-            </div>
+      <div class="col-lg-4 text-center py-3">
+        <div class="d-inline-flex align-items-center">
+          <i class="bi bi-geo-alt fs-1 text-primary me-3"></i>
+          <a href="https://maps.app.goo.gl/2jRuVAPdA3SXr8KA9" target="_blank">
+          <div class="text-start">
+            <h6 class="text-uppercase text-primary fw-bold">Our Office</h6>
+            <span>Kupondole, Lalitpur, Nepal</span>
+          </div>
+          </a>
         </div>
-        <div class="col-lg-4 text-center border-start border-end py-3">
-            <div class="d-inline-flex align-items-center">
-                <i class="bi bi-envelope-open fs-1 text-primary me-3"></i>
-                <div class="text-start">
-                    <h6 class="text-uppercase text-primary fw-bold">Email Us</h6>
-                    <span>ysbuilders075@gmail.com</span>
-                </div>
-            </div>
+      </div>
+      <div class="col-lg-4 text-center border-start border-end py-3">
+        <div class="d-inline-flex align-items-center">
+          <i class="bi bi-envelope-open fs-1 text-primary me-3"></i>
+          <div class="text-start">
+            <h6 class="text-uppercase text-primary fw-bold">Email Us</h6>
+           
+            <span><a
+              href="mailto:ysbuilders075@gmail.com"
+              >ysbuilders075@gmail.com</a></span>
+          </div>
         </div>
-        <div class="col-lg-4 text-center py-3">
-            <div class="d-inline-flex align-items-center">
-                <i class="bi bi-phone-vibrate fs-1 text-primary me-3"></i>
-                <div class="text-start">
-                    <h6 class="text-uppercase text-primary fw-bold">Call Us</h6>
-                    <span>+977 9860915451</span>
-                </div>
-            </div>
+      </div>
+      <div class="col-lg-4 text-center py-3">
+        <div class="d-inline-flex align-items-center">
+          <i class="bi bi-phone-vibrate fs-1 text-primary me-3"></i>
+          <div class="text-start">
+            <h6 class="text-uppercase text-primary fw-bold">Call Us</h6>
+            <span><a href="tel://+9779860915451"> +977 9860915451</a></span>
+          </div>
         </div>
+      </div>
     </div>
-</div>
-<!-- Topbar End -->
+  </div>
+  <!-- Topbar End -->
 
 
 <!-- Navbar Start -->
@@ -126,14 +131,13 @@
                 <div class="bg-light text-center p-5">
 
                   <form action="https://api.web3forms.com/submit" method="POST">
-                    <input type="hidden" name="access_key" value="ac0fc024-542b-49d8-8815-891454511d69">
                     <div class="row g-3">
                       <div class="col-12 col-sm-6">
                         <input
                           type="text"
                           class="form-control border-0"
                           placeholder="Your Name"
-                          style="height: 55px" required
+                          style="height: 55px"
                         />
                       </div>
                       <div class="col-12 col-sm-6">
@@ -141,15 +145,15 @@
                           type="email"
                           class="form-control border-0"
                           placeholder="Your Email"
-                          style="height: 55px" required
+                          style="height: 55px" 
                         />
                       </div>
                       <div class="col-12 col-sm-6">
                           <input
                             type="subject"
                             class="form-control border-0"
-                            placeholder="Submit"
-                            style="height: 55px" required
+                            placeholder="Subject"
+                            style="height: 55px" 
                           />
                         </div>
                       <div class="col-12 col-sm-6">
@@ -157,7 +161,7 @@
                             type="phone"
                             class="form-control border-0"
                             placeholder="Your Phone Number"
-                            style="height: 55px" required
+                            style="height: 55px"
                           />
                         </div>
                         
@@ -166,7 +170,7 @@
                         <textarea
                           class="form-control border-0"
                           rows="5"
-                          placeholder="Message" required
+                          placeholder="Message" 
                         ></textarea>
                       </div>
                       <input type="hidden" name="redirect" value="https://www.ysbuilders.com.np/thanks.html">
