--- a/index.html
+++ b/index.html
@@ -49,10 +49,12 @@
         <div class="col-lg-4 text-center py-3">
           <div class="d-inline-flex align-items-center">
             <i class="bi bi-geo-alt fs-1 text-primary me-3"></i>
+            <a href="https://maps.app.goo.gl/2jRuVAPdA3SXr8KA9" target="_blank">
             <div class="text-start">
               <h6 class="text-uppercase text-primary fw-bold">Our Office</h6>
               <span>Kupondole, Lalitpur, Nepal</span>
             </div>
+            </a>
           </div>
         </div>
         <div class="col-lg-4 text-center border-start border-end py-3">
@@ -60,7 +62,10 @@
             <i class="bi bi-envelope-open fs-1 text-primary me-3"></i>
             <div class="text-start">
               <h6 class="text-uppercase text-primary fw-bold">Email Us</h6>
-              <span>ysbuilders075@gmail.com</span>
+             
+              <span><a
+                href="mailto:ysbuilders075@gmail.com"
+                >ysbuilders075@gmail.com</a></span>
             </div>
           </div>
         </div>
@@ -69,7 +74,7 @@
             <i class="bi bi-phone-vibrate fs-1 text-primary me-3"></i>
             <div class="text-start">
               <h6 class="text-uppercase text-primary fw-bold">Call Us</h6>
-              <span>+977 9860915451</span>
+              <span><a href="tel://+9779860915451"> +977 9860915451</a></span>
             </div>
           </div>
         </div>
