--- a/detail.html
+++ b/detail.html
@@ -301,21 +301,23 @@
           <div class="col-sm-6">
             <h4 class="text-white text-uppercase mb-4">Locations</h4>
             <div class="d-flex flex-column justify-content-start text-white">
-              <p>
-                <i class="fa fa-map-marker-alt me-2 text-white"></i>Kupondole, Lalitpur,
-                Nepal
-              </p>
-              <p><i class="fa fa-phone-alt me-2 text-white"></i>+977 9860915451</p>
-              <p>
-                <i class="fa fa-envelope me-2 text-white"></i>ysbuilders075@gmail.com
-              </p>
-              <!-- <div class="d-flex justify-content-start mt-4">
-                              <a class="btn btn-lg btn-primary btn-lg-square rounded-0 me-2" href="#"><i class="fab fa-twitter"></i></a>
-                              <a class="btn btn-lg btn-primary btn-lg-square rounded-0 me-2" href="#"><i class="fab fa-facebook-f"></i></a>
-                              <a class="btn btn-lg btn-primary btn-lg-square rounded-0 me-2" href="#"><i class="fab fa-linkedin-in"></i></a>
-                              <a class="btn btn-lg btn-primary btn-lg-square rounded-0" href="#"><i class="fab fa-instagram"></i></a>
-                          </div> -->
-            </div>
+                <p>
+                  <i class="fa fa-map-marker-alt me-2 text-white"></i><a href="https://maps.app.goo.gl/2jRuVAPdA3SXr8KA9" target="_blank">Kupondole, Lalitpur,
+                  Nepal</a>
+                </p>
+                <p><i class="fa fa-phone-alt me-2 text-white"></i><a href="tel://+9779860915451">+977 9860915451</a></p>
+                <p>
+                  <i class="fa fa-envelope me-2 text-white"></i><a
+                  href="mailto:ysbuilders075@gmail.com"
+                  >ysbuilders075@gmail.com</a>
+                </p>
+                <!-- <div class="d-flex justify-content-start mt-4">
+                                <a class="btn btn-lg btn-primary btn-lg-square rounded-0 me-2" href="#"><i class="fab fa-twitter"></i></a>
+                                <a class="btn btn-lg btn-primary btn-lg-square rounded-0 me-2" href="#"><i class="fab fa-facebook-f"></i></a>
+                                <a class="btn btn-lg btn-primary btn-lg-square rounded-0 me-2" href="#"><i class="fab fa-linkedin-in"></i></a>
+                                <a class="btn btn-lg btn-primary btn-lg-square rounded-0" href="#"><i class="fab fa-instagram"></i></a>
+                            </div> -->
+              </div>
           </div>
         </div>
       </div>
