--- a/about.html
+++ b/about.html
@@ -354,7 +354,7 @@
                     </a> -->
             <a
               class="portfolio-btn"
-              href="img/project/project-5.jpg"
+              href="img/award/award-5.jpg"
               data-lightbox="portfolio"
             >
               <i class="bi bi-plus text-white"></i>
