--- a/contact.html
+++ b/contact.html
@@ -146,7 +146,8 @@
     <!-- Page Header Start -->
 
     <section class="ftco-section p-5 contact-section">
-      <h1 class="text-center text-uppercase">Contact Us for any Query</h1>
+      <h1 class="text-center display-5  text-uppercase"><span class="text-primary">Contact Us</span></h1>
+      <h1 class="text-center display-5  text-uppercase">for any Query</h1>
       <br />
       <div class="container">
         <div class="row block-9">
