--- a/detail.html
+++ b/detail.html
@@ -216,7 +216,7 @@
                 <!-- Image End -->
 
                 <!-- Tags Start -->
-                <div class="mb-5">
+                <!-- <div class="mb-5">
                     <h3 class="text-uppercase mb-4">Tag Cloud</h3>
                     <div class="d-flex flex-wrap m-n1">
                         <a href="" class="btn btn-outline-dark m-1">Design</a>
@@ -232,7 +232,7 @@
                         <a href="" class="btn btn-outline-dark m-1">Writing</a>
                         <a href="" class="btn btn-outline-dark m-1">Consulting</a>
                     </div>
-                </div>
+                </div> -->
                 <!-- Tags End -->
 
                 <!-- Plain Text Start -->
