--- a/about.html
+++ b/about.html
@@ -117,61 +117,72 @@
 
 
      <!-- About Start -->
-     <div class="container-fluid bg-light py-6 px-5">
-        <div class="row g-5">
-          <div class="col-lg-7">
-            <h1 class="display-5 text-uppercase mb-4">
-              Why <span class="text-primary">Y.S. Builders?</span>
-            </h1>
-            <h2 class="text-uppercase mb-3 text-center">
-              Select our construction firm for our unmatched
-              <span class="text-primary">
-                dedication to excellence, punctual project completion, and
-                creative solutions</span
-              >
-              customised to fulfil your every requirement.
-            </h2>
-            <div class="row gx-5 py-2">
-              <div class="col-sm-6 mb-2">
-                <p class="fw-bold mb-2">
-                  <i class="fa fa-check text-primary me-3"></i>Perfect Planning
-                </p>
-                <p class="fw-bold mb-2">
-                  <i class="fa fa-check text-primary me-3"></i>Professional
-                  Workers
-                </p>
-                <p class="fw-bold mb-2">
-                  <i class="fa fa-check text-primary me-3"></i>First Working
-                  Process
-                </p>
-              </div>
-              <div class="col-sm-6 mb-2">
-                <p class="fw-bold mb-2">
-                  <i class="fa fa-check text-primary me-3"></i>Perfect Planning
-                </p>
-                <p class="fw-bold mb-2">
-                  <i class="fa fa-check text-primary me-3"></i>Professional
-                  Workers
-                </p>
-                <p class="fw-bold mb-2">
-                  <i class="fa fa-check text-primary me-3"></i>First Working
-                  Process
-                </p>
-              </div>
+    <div class="container-fluid py-6 px-5">
+      <div class="row g-5">
+        <div class="col-lg-7">
+          <h1 class="display-5 text-uppercase mb-4">
+            Why <span class="text-primary">Y.S. Builders?</span>
+          </h1>
+          <h2 class="text-uppercase mb-3 text-center">
+            Select our construction firm for our unmatched
+            <span class="text-primary">
+              dedication to excellence, punctual project completion, and
+              creative solutions</span
+            >
+            customised to fulfil your every requirement.
+          </h2>
+          <div class="row gx-5 py-2">
+            <div class="col-sm-6 mb-2">
+              <p class="fw-bold mb-2">
+                <i class="fa fa-check text-primary me-3"></i>Expertise and Experience
+              </p>
+              <p class="fw-bold mb-2">
+                <i class="fa fa-check text-primary me-3"></i>Tailored Solutions
+              </p>
+              <p class="fw-bold mb-2">
+                <i class="fa fa-check text-primary me-3"></i>Qualified Team
+                Process
+              </p>
+              <p class="fw-bold mb-2">
+                <i class="fa fa-check text-primary me-3"></i>Customer-Centric Approach
+              </p>
+              <p class="fw-bold mb-2">
+                <i class="fa fa-check text-primary me-3"></i>Sustainability Focus
+                Process
+              </p>
             </div>
-          </div>
-          <div class="col-lg-5 pb-5" style="min-height: 400px">
-            <div class="position-relative bg-dark-radial h-100 ms-5">
-              <img
-                class="position-absolute w-100 h-100 mt-5 ms-n5"
-                src="img/about.jpg"
-                style="object-fit: cover"
-              />
+            <div class="col-sm-6 mb-2">
+              <p class="fw-bold mb-2">
+                <i class="fa fa-check text-primary me-3"></i>Commitment to Quality
+              </p>
+              <p class="fw-bold mb-2">
+                <i class="fa fa-check text-primary me-3"></i>On-Time Delivery
+                Workers
+              </p>
+              <p class="fw-bold mb-2">
+                <i class="fa fa-check text-primary me-3"></i>Transparency
+              </p>
+              <p class="fw-bold mb-2">
+                <i class="fa fa-check text-primary me-3"></i>Safety and Compliance
+              </p>
+              <p class="fw-bold mb-2">
+                <i class="fa fa-check text-primary me-3"></i>Innovative Technology
+              </p>
             </div>
           </div>
         </div>
+        <div class="col-lg-5 pb-5" style="min-height: 500px">
+          <div class="position-relative  h-100 ms-5">
+            <img
+              class="position-absolute w-100 h-100 mt-3 ms-n5"
+              src="img/about.jpg"
+              style="object-fit: cover"
+            />
+          </div>
+        </div>
       </div>
-      <!-- About End -->
+    </div>
+    <!-- About End -->
 
 
 
